# ArithSearch

./: .gitignore  10-10-10.csv  10-10.csv  3-3-3-3-3.csv  3-3-3-3.csv  3-3-3.csv  3-3.csv  4-4-4-4.csv  CMakeLists.txt  README.md  basic_horner.py  brute_force.py  c_star.py  caching_horner.py  circuit.py  div_search.py  evaluate.py  factorinator.py  main.py  meta_search.py  read_lib.py  simple_search.py  smart_force.py  sparse_poly.py  stochastic.py  super_circuit.py  test.cpp  test.csv  tree_analysis.py
data/: no_depth.csv
evaluation_data/: evaluation_2.csv  evaluation_4.csv  evaluation_5.csv  small_no_r_rands.csv
include/: anneal_node.h  div_utils.hpp  divsearch.h
py/: basic_horner.py  brute_force.py  meta_search.py  read_lib.py  simple_search.py  smart_force.py  sparse_poly.py  stochastic.py  super_circuit.py
py/data/: 6-3-3-3-3-3-3.csv  9-9-9-9-9.csv  allow_negative.csv  pos_only.csv
py/evaluation_data/: evaluation_1.csv  evaluation_3.csv  evaluation_6.csv  evaluation_7.csv  evaluation_8.csv  test.csv
src/: anneal_node.cpp  divsearch.cpp
